# resume-website

./: .env.example  .gitignore  Makefile  README.md  deploy-ec2.md  package.json
.github/workflows/: ci-cd.yml
backend/: pyproject.toml  requirements.txt  setup.cfg
backend/app/: database.py  main.py  models.py
backend/app/routes/: education.py  experiences.py  person.py  projects.py  resume.py  sections.py
backend/app/services/: google_docs.py
backend/tests/: conftest.py  test_main.py  test_person.py  test_projects.py  test_resume.py  test_routes.py  test_sections.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  App.test.jsx  index.css
frontend/src/components/: ProjectManager.css  ProjectManager.jsx  Resume.css  Resume.jsx  Resume.test.jsx  SectionReorder.css  SectionReorder.jsx
frontend/src/services/: api.js  api.test.js
scripts/: lib.sh  start-local.sh  start-prod.sh  stop-local.sh  stop-prod.sh
